--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=Book My Desk
+
+server.port=8002
+
+spring.datasource.url = jdbc:mysql://10.30.1.64:3306/hemalapa?useSSL=false&serverTimeZone=UTC&useLegacyDatetimecode=false
+spring.datasource.username=hemalapa
+spring.datasource.password=Sandhata@123
+
+#Hibernate
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+#Hibernate auto ddl
+spring.jpa.hibernate.ddl-auto = update
+
+logging.level.org.hibernate.sql = DEBUG
+logging.level.org.springframework.web=DEBUG
